JS-379 Merge file traversals to count project size and tsconfigs together (#4888)